# socratic-thinking-mcp

./: README.md  pyproject.toml
gpt/: GPT_CONFIG.md
knowledge/: 01-Question-Storming.md  02-Kipling-Method.md  03-Appreciative-Inquiry.md  04-Socratic-Questioning.md  05-Jobs-To-Be-Done.md  06-Liberating-Structures-1-2-4-All.md  07-Assumption-Testing.md  08-Thought-Experiments.md  09-Cynefin-Framework.md  10-Impact-Effort-Matrix.md  11-Business-Model-Canvas.md  12-Value-Proposition-Canvas.md  13-Lean-Canvas.md  14-Theory-of-Constraints-TOC.md  15-Causal-Loop-Diagrams.md  16-Critical-Success-Factors.md  17-Stakeholder-Mapping.md  18-Worst-Possible-Idea.md  19-Balanced-Scorecard.md  20-TRIZ-Contradiction-Matrix.md  21-False-Faces-Reversal.md  22-Slice-and-Dice.md  23-Cherry-Split.md  24-Think-Bubbles.md  25-SCAMPER.md  26-Tug-of-War.md  27-Idea-Box.md  28-Lotus-Blossom.md  29-Phoenix-Checklist.md  30-BruteThink.md  31-Chilling-Out.md  32-Blue-Roses.md  33-Three-Bs.md  34-Rattlesnakes-and-Roses.md  35-Stone-Soup.md  36-Dreamscape.md  37-Da-Vinci-Technique.md  38-Dali-Technique.md  39-Not-Kansas.md  40-Murder-Board.md  (+10 more)
src/: classifier.py  question_engine.py  rag.py  rag_old.py  server.py
src/methods/: templates.py
supabase/functions/search/: index.ts
