[project]
name = "innovation-socratic-mcp"
version = "2.0.0"
description = "Innovation Socratic MCP - AI that asks, not answers. 58 question frameworks for strategic thinking, decision-making, and creative problem-solving."
authors = [{name = "Sean Shin", email = "sean@geri.global"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = [
    "mcp",
    "socratic-method",
    "thinking-tools",
    "decision-making",
    "strategic-thinking",
    "creative-thinking",
    "swot",
    "bcg-matrix",
    "scamper",
    "design-thinking",
    "questioning",
    "metacognition"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=0.1.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/innovation-socratic-mcp"
Repository = "https://github.com/yourusername/innovation-socratic-mcp"
Documentation = "https://github.com/yourusername/innovation-socratic-mcp#readme"
"Bug Tracker" = "https://github.com/yourusername/innovation-socratic-mcp/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
rag = [
    "chromadb>=0.4.0",
    "sentence-transformers>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
